# CodeCompass

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_backend.py
.github/workflows/: deploy-streamlit.yml  test.yml
config/: default.yaml
examples/: claude_desktop_config.json
scripts/: setup.sh
src/: __init__.py  mcp_server.py  simple_mcp_server.py  streamlit_app.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  analyzer.py  explainer.py  file_utils.py  search.py
src/utils/: __init__.py  safety.py
tests/: test_basic.py
